# chatdoc

./: README.md  pyproject.toml  setup.sh
src/: app.py  conversation.py  document_utils.py  htmlTemplates.py  prompt_refiner.py  text_processing.py
test/: test.txt
